<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#8BC34A"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idTextFechaPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/compras_texto_fecha" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/historial_alquiler_nombreAmbiente" />

                <TextView
                    android:id="@+id/idTextNombreAlq"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"

                    android:layout_gravity="center"
                    android:text="@string/historial_alquiler_ambiente" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/historial_alquiler_fechaAlquiler" />

                <TextView
                    android:id="@+id/idTextFechaAlq"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"

                    android:text="@string/texto_fecha" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/historial_hora_inicio" />

                <TextView
                    android:id="@+id/idTextHoraAlq"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"

                    android:text="@string/texto_horas" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/historial_alquiler_horas" />

                <TextView
                    android:id="@+id/idTextCantidadHoras"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"

                    android:text="@string/text_numero" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/historial_texto_monto" />



                <TextView
                    android:id="@+id/idTextMontoPago"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"

                    android:text="@string/text_numero" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>