<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.ActivityISS">


    <LinearLayout
        android:id="@+id/linearLayoutMenu"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:background="#F6D7D7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="412dp"
            android:layout_height="60dp"
            android:background="#F6D7D7"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/idBotonVolverTienda"
                android:layout_width="7dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="#F6D7D7"
                android:layout_gravity="center"
                android:contentDescription="@string/texto_volver"
                android:onClick="regresar"
                app:srcCompat="@drawable/ic_flecha_foreground" />

            <ImageView
                android:id="@+id/imagenLogo"
                android:layout_width="18dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/cip" />

            <TextView
                android:id="@+id/txtcipcdach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/titulo_cip_ca"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTitulo"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="#E31E25"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/texto_iss"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="576dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idTextQueEs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/iss_quees" />


            <TextView
                android:id="@+id/idTextdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_descripcion"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idTextQuienes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/iss_quienes" />

            <TextView
                android:id="@+id/idTextQuienes1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_quienes1" />

            <TextView
                android:id="@+id/idTextQuienes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_quienes2" />

            <TextView
                android:id="@+id/idTextQuienes3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="3dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_quienes3" />

            <TextView
                android:id="@+id/idTextQuienesDerecho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/iss_quienesderecho" />

            <TextView
                android:id="@+id/idTextQuienesDerecho1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_quienesderecho1" />

            <TextView
                android:id="@+id/idTextQuienesDerecho2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="1sp"
                android:text="@string/iss_quienesderecho2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idTextFormato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/iss_formatos"
                    android:textStyle="bold" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato1"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/iss_formato1" />

                    <ImageView
                        android:id="@+id/idWord1"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato2"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="1sp"
                        android:text="@string/iss_formato2" />

                    <ImageView
                        android:id="@+id/idWord2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:clickable="true"

                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato3"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:lineSpacingExtra="1sp"
                        android:layout_gravity="center"
                        android:text="@string/iss_formato3" />

                    <ImageView
                        android:id="@+id/idWord3"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:clickable="true"
                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato4"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:lineSpacingExtra="1sp"
                        android:layout_gravity="center"
                        android:text="@string/iss_formato4" />

                    <ImageView
                        android:id="@+id/idWord4"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:clickable="true"

                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato5"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:lineSpacingExtra="1sp"
                        android:layout_gravity="center"
                        android:text="@string/iss_formato5" />

                    <ImageView
                        android:id="@+id/idWord5"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:clickable="true"
                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idTextFormato6"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:lineSpacingExtra="1sp"
                        android:layout_gravity="center"
                        android:text="@string/iss_formato6" />

                    <ImageView
                        android:id="@+id/idWord6"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:clickable="true"
                        app:srcCompat="@drawable/iconoword" />

                </LinearLayout>
            </LinearLayout>



            <TextView
                android:id="@+id/idTextEnviarcorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:text="@string/iss_enviarcorreo" />


            <TextView
                android:id="@+id/idTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:text="@string/iss_correo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="532dp"
                    app:srcCompat="@drawable/iss" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>